--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,9 @@ email:
 description: >- # this means to ignore newlines until "baseurl:"
         things I think are interesting enough to post online
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://fnand.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+#twitter_username: jekyllrb
+github_username:  fnand
 
 # Build settings
 theme: minima
