--- a/_config.yml
+++ b/_config.yml
@@ -28,10 +28,10 @@ url: "https://fnand.github.io/" # the base hostname & protocol for your site, e.
 github_username:  fnand
 
 # Build settings
+markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
-
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
